hphp/hack/test/typecheck/new_inference/eager_solve/map_any.php.exp
File "map_any.php", line 11, characters 26-27:
Was expecting a type hint (Typing[4032])
File "map_any.php", line 15, characters 7-8:
Was expecting an object but type is unknown (Typing[4297])
  File "map_any.php", line 14, characters 5-6:
  It is unknown because the type of the lambda parameter could not be determined. Please add a type hint to the parameter
